# finance-tracker

./: .gitignore  README.md  config_example.yaml  pyproject.toml
src/financetracker/: core.py  files.py  main.py  sheetsapi.py
tests/: test_sheetsapi.py
